<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/keyline_spacing">

    <com.google.android.material.textview.MaterialTextView
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_name" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/keyline_spacing"
        android:gravity="center_horizontal"
        android:text="@string/accept_terms_dialog_text" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginTop="@dimen/keyline_spacing">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/declineButton"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept_terms_dialog_cancel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/acceptButton"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/keyline_spacing"
            android:layout_marginLeft="@dimen/keyline_spacing"
            android:text="@string/accept_terms_dialog_ok" />
    </LinearLayout>

</LinearLayout>